--- a/styles/styles.css
+++ b/styles/styles.css
@@ -481,9 +481,12 @@ footer .footer_comercial {
         height: 100%;
         
     }
+
+    
     
     .background {
         height: 90vh;
+        
     }
 
     .myinformations #Alex img {
@@ -498,5 +501,19 @@ footer .footer_comercial {
         gap: 15px;
     }
 
+}
+
+@media (max-width: 992px) and (orientation: landscape) {
+header{
+    height: 50px;
+}
+
+    .myinformations h2{
+        
+    }
+    .myinformations .myinformations2{
+     display: flex;
+        
+    }
 }
 
