--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@ html {
     background-size: cover;
     background-position: center;
     max-width: 100%;
-    height: 100vh;
+    height: 90vh;
 }
 
 
@@ -38,6 +38,7 @@ header {
     background-color: #01000174;
     padding: 10px;
     align-items: center;
+    height: 70px;
 
 }
 
