--- a/styles/styles.css
+++ b/styles/styles.css
@@ -216,6 +216,7 @@ main .sobre {
     font-size: 1.3rem;
     grid-row: 2;
     grid-column: 1/-1;
+    text-align: justify;
 }
 
 .sobre-info {
@@ -257,13 +258,6 @@ main .sobre {
     display: flex;
     justify-content: center;
     gap: 30px;
-}
-
-.projects_models ul li {
-    cursor: pointer;
-    background-color: #332A66;
-    border: 1px solid #4BF4EF;
-    padding: 6px 20px;
 }
 
 .projects_armazenamentos_web ul {
