--- a/styles/styles.css
+++ b/styles/styles.css
@@ -291,6 +291,12 @@ main .sobre {
 
 
 
+.projects_armazenamentos_web #website a{
+    background: none;
+    display: block;
+}
+
+
 /* FOOTER */
 
 footer {
