--- a/styles/styles.css
+++ b/styles/styles.css
@@ -481,6 +481,10 @@ footer .footer_comercial {
         display: none;
     }
 
+    #lerMais {
+        display: none;
+    }
+
     .projects_armazenamentos{
         display: block;
     }
